Update to JDA beta 20
Update to JDA beta 20
Update to Jsoup 1.17.2
Add /roll
Add more subcommands constants
Refactor AddCommands.java, in order to optimize memory usage.
Add Algorithm.safeAdd for int.